--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <img src="./img/group-30@3x.png" class="parallax-section-circle-img">
     <div class="first-parallax-section-title-box">
       <h2 class="first-parallax-section-title-text no-margin-text aguaviento-font-montserrat-medium letter-spacing-less-dot-one white-text">Productos que acompañan tu bienestar.</h2>
-      <a href="/products.html">
+      <a href="products.html">
         <div class="first-parallax-section-button-box aguaviento-flex-column hover-light-blue cursor-pointer">
         <p class="first-parallax-section-button-text bluish-text no-margin-text uppercase aguaviento-font-montserrat-light letter-spacing-dot-six">conoce más</p>
       </div>
