--- a/products-en.html
+++ b/products-en.html
@@ -590,7 +590,7 @@
         </div>
         <div class="industrial hidden">
           <div class="meet-us">
-            <img src="img/banner/banner-es.jpg" alt="">
+            <img src="img/banner/banner-en.jpg" alt="">
             <div class="meet-us-title">
               <h4 class="aguaviento-font-montserrat-medium">Conoce más de la marca</h4>
             </div>
